Bug fix-1704222, fix-1707717, reduced transparency for dialog, fix-1705143 Extended Lightwave UI to support Microsoft Edge 25, EdgeHTML 13.1 browser
Change-Id: Ib39da405d43048529f05c7f5cdea025530178b08

--- a/vmidentity/sso-common/src/main/resources/messages.properties
+++ b/vmidentity/sso-common/src/main/resources/messages.properties
@@ -24,7 +24,7 @@ LoginForm.RsaSecurID = Use RSA SecurID
 LoginForm.ErrorSSPI = Windows Session Authentication login has failed as a result of an error caused by the VMware Client Integration Plugin
 LoginForm.DownloadCIP = Download Client Integration Plugin
 LoginForm.Login = Login
-LoginForm.UnsupportedBrowserWarning = Your browser-OS combination is not supported. Some features might not work correctly. A minimum of IE10, Firefox 34 or Chrome 39 are required on Windows. A minimum of Firefox 34 or Chrome 39 are required on Mac OS X. Read the vSphere Web Client help for details.
+LoginForm.UnsupportedBrowserWarning = Your browser-OS combination is not supported. Some features might not work correctly. A minimum of Edge 13, Firefox 34 or Chrome 39 are required on Windows. A minimum of Firefox 34 or Chrome 39 or Safari 9 are required on Mac OS X.
 LoginForm.IAgreeTo = I agree to 
 LoginForm.LogonBannerAlertMessage = In order to use our services, you must agree to 
 Requester = The request is invalid
