sts: support custom claims in rst request
allow an admin to configure tenant attributes and provider attribute map
allow rst to specify a set of claims to return
support a constant value claim (in addition to a mapped ldapAttribute)

testing done:
 - deployed stand-alone lw instance
 - vmidentity uunit tests & integration tests passed
 - verified registering additional claims, and requeesting them in rst

Change-Id: I00bbdbdce46ded9a92ffe2c34d6846d389e9157a

--- a/vmidentity/rest/idm/server/src/main/resources/i18n/idm/LocalStrings.properties
+++ b/vmidentity/rest/idm/server/src/main/resources/i18n/idm/LocalStrings.properties
@@ -34,6 +34,9 @@ res.provider.get.all.failed=Failed to retrieve identity providers for tenant '%s
 res.provider.get.failed=Failed to retrieve identity provider '%s' for tenant '%s'
 res.provider.probe.failed=Failed to probe identity provider '%s' for tenant '%s'
 res.provider.update.failed=Failed to update identity provider '%s' for tenant '%s'
+res.provider.getAttributesMap.failed=Failed to retrieve attributes map for identity provider '%s' for tenant '%s'
+res.provider.updateAttributesMap.failed=Failed to update attributes map for identity provider '%s' for tenant '%s'
+res.provider.setAttributesMap.failed=Failed to set attributes map for identity provider '%s' for tenant '%s'
 
 ## Server Resource
 res.server.add.joinad.failed=Failed to join active directory on domain '%s'
@@ -55,6 +58,11 @@ res.ten.get.failed=Failed to retrieve tenant '%s'
 res.ten.get.config.failed=Failed to retrieve configuration details of tenant '%s'
 res.ten.update.config.failed=Failed to update the configuration details for tenant '%s'
 res.ten.search.failed=Failed to search members on tenant '%s'
+
+## Attributes Resource
+res.ten.attributes.get.all.failed=Failed to retrieve attributes for tenant '%s'
+res.ten.attributes.set.failed=Failed to set attributes for tenant '%s'
+res.ten.attributes.update.failed=Failed to update attributes for tenant '%s'
 
 ## User Resource
 res.user.get.failed=Failed to retrieve user '%s' from tenant '%s'
